--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,11 +3,98 @@
     padding: 80px 0 80px;
     background-color: $gray900;
 
+    &__top {
+        display: flex;
+        margin-bottom: 49px;
+    }
+
+    &__contact {
+        width: 100%;
+        max-width: 735px;
+    }
+
+    &__logo {
+        display: inline-block;
+        margin-right: 4%;
+    }
+
+    &__links {
+        display: inline-flex;
+        gap: 18px;
+    }
+
+    &__link {
+        a svg g {
+            transition: all ease .2s;
+        }
+        a:hover svg g {
+            opacity: 1;
+        }
+    } 
+
+    &__description {
+        width: 100%;
+        max-width: 493px;
+        margin-top: 24px;
+        @include font('Ubuntu-regular', 14px, 150%, $white);
+        opacity: 60%;
+    }
+
+    &__form-title {
+        margin-bottom: 24px;
+        @include font('Ubuntu-bold', 24px, 150%, $white);
+    }
+
+    &__form {
+        width: 100%;
+        max-width: 495px;
+        form {
+            display: flex;
+            width: 100%;
+            height: 44px;
+            margin-bottom: 16px;
+
+        }
+    }
+
+    #footerEmail {
+        width: 74%;
+        padding: 11px 16px;
+
+        background-color: $gray800;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        outline: none;
+        border: 1px solid $gray700;
+        @include font('Ubuntu-regular', 14px, 150%, $white);
+        opacity: 60%;
+    }
+
+    #footerEmail::placeholder {
+        @include font('Ubuntu-regular', 14px, 150%, $white);
+        opacity: 60%;
+    }
+
+    #footerSubmit {
+        width: 26%;
+        @include font('Ubuntu-bold', 14px, 44px, $white);
+        background-color: $primary;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        cursor: pointer;
+    }
+
+    &__form-desc {
+        @include font('Ubuntu-regular', 12px, 150%, $white);
+        opacity: 60%;
+    }
+    
     &__info {
         display: flex;
         justify-content: space-between;
         width: 100%;
         max-width: 895px;
+        margin-bottom: 38px;
     }
 
     &__item {
@@ -27,6 +114,38 @@
             display: inline;
             opacity: 60%;
             @include font('Ubuntu-regular', 16px, 160%, $white);
+            transition: all ease .2s;
+        }
+
+        a:hover {
+            opacity: 100%;
+        }
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+
+    &__copyrights {
+        display: flex;
+        justify-content: space-between;
+        width: 297px;
+        span {
+            @include font('Ubuntu-regular', 12px, 150%, $white);
+        }
+
+        span, svg  {
+            display: inline;
+        }
+    }
+
+    &__button {
+        width: 129px;
+        @include font('Ubuntu-regular', 14px, 150%, $white);
+        svg {
+            transform: translate(12px, 4px);
         }
     }
 }
