--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   font-weight: 900;
 }
 * {
+  box-sizing: border-box;
   padding: 0px;
   margin: 0px;
   border: none;
@@ -107,6 +108,109 @@ label, span {
   background-image: url(../images/header/chat.svg);
   background-repeat: no-repeat;
   background-position-y: center;
+}
+
+.feedback {
+  padding: 80px 0;
+  background: url(../images/portfolio/forms_bg.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.feedback .form {
+  max-width: 495px;
+  margin-left: auto;
+  padding: 48px 40px;
+  background: #FFFFFF;
+}
+.feedback .form h3 {
+  text-align: center;
+  margin-bottom: 24px;
+  font-family: "Ubuntu-bold";
+  font-size: 28px;
+  line-height: 150%;
+  color: #1E212C;
+}
+.feedback .form label {
+  margin-bottom: 20px;
+}
+.feedback .form label span {
+  margin-bottom: 8px;
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #424551;
+}
+.feedback .form input::-moz-placeholder {
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #9A9CA5;
+}
+.feedback .form input::placeholder {
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #9A9CA5;
+}
+.feedback .form__name, .feedback .form__phone, .feedback .form__email {
+  width: 100%;
+  height: 44px;
+  padding: 0 16px;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  background-color: #F4F5F6;
+  outline: none;
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #9A9CA5;
+}
+.feedback .form__message {
+  width: 100%;
+  height: 66px;
+  padding: 11px 16px;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  background-color: #F4F5F6;
+  outline: none;
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #9A9CA5;
+  resize: none;
+}
+.feedback .form__checkbox {
+  display: flex;
+  align-items: baseline;
+  gap: 12px;
+  margin-bottom: 24px;
+  cursor: pointer;
+}
+.feedback .form__checkbox span {
+  font-family: "Ubuntu-regular";
+  font-size: 14px;
+  line-height: 150%;
+  color: #424551;
+}
+.feedback .form__btn {
+  display: block;
+  margin: 0 auto;
+  height: 44px;
+  padding: 0 32px;
+  background: #FF5A30;
+  border-radius: 4px;
+  border: 1px solid #FF5A30;
+  font-family: "Ubuntu-bold";
+  font-size: 14px;
+  line-height: 44px;
+  color: #FFFFFF;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  transition: all ease 0.2s;
+}
+.feedback .form__btn:hover {
+  color: #FF5A30;
+  background: none;
 }
 
 .footer {
