--- a/styles/_feedback.scss
+++ b/styles/_feedback.scss
@@ -1,6 +1,6 @@
 .feedback {
     padding: 80px 0;
-    background: url(../images/portfolio/forms_bg.png) no-repeat;
+    background: url(../images/Work/forms_bg.png) no-repeat;
     background-size: cover;
     background-position: center;
 
