--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,8 @@ label, span {
   justify-content: space-between;
   align-items: center;
   height: 92px;
+  position: relative;
+  z-index: 2;
 }
 .header__nav {
   width: 100%;
@@ -112,7 +114,7 @@ label, span {
 
 .feedback {
   padding: 80px 0;
-  background: url(../images/portfolio/forms_bg.png) no-repeat;
+  background: url(../images/Work/forms_bg.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
