--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 92px; 
+    height: 92px;
+    position: relative;
+    z-index: 2; 
 
     &__nav {
         width: 100%;
