--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,3 +1,12 @@
+a, a:link, a:visited  {
+    text-decoration: none;
+    display: block;
+}
+
+label, span {
+    display: block;
+}
+
 .footer {
     width: 100%;
     padding: 80px 0 80px;
