--- a/styles/_feedback.scss
+++ b/styles/_feedback.scss
@@ -1,3 +1,12 @@
+a, a:link, a:visited  {
+    text-decoration: none;
+    display: block;
+}
+
+label, span {
+    display: block;
+}
+
 .feedback {
     padding: 80px 0;
     background: url(../images/Work/forms_bg.png) no-repeat;
