--- a/Work/Work.css
+++ b/Work/Work.css
@@ -225,14 +225,19 @@ h1 {
     color: #1E212C;
 }
 
-.slide>img {
+.swiper {
+    width: 100%;
+    max-width: 599px;
+}
+
+.swiper-slide>img {
     width: 72px;
     height: 72px;
     margin-bottom: 24px;
     border-radius: 40px;
 }
 
-.slide>p {
+.swiper-slide>p {
     margin-bottom: 24px;
     font-family: 'Ubuntu-regular';
     font-size: 16px;
@@ -240,7 +245,7 @@ h1 {
     color: #424551;
 }
 
-.slide>strong {
+.swiper-slide>strong {
     margin-bottom: 4px;
     font-family: 'Ubuntu-bold';
     font-size: 16px;
@@ -248,12 +253,37 @@ h1 {
     color: #1E212C;
 }
 
-.slide>span {
+.swiper-slide>span {
     font-family: 'Ubuntu-regular';
     font-size: 14px;
     line-height: 150%;
     color: #787A80;
 }
+
+.swiper-button-prev {
+    left: auto;
+    right: 50px;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    top:auto;
+    bottom: -10px;
+}
+
+.swiper-button-prev::after {
+    content: '';
+    width: 18px;
+    height: 11px;
+    background: url(../images/Work/arrow_left.svg);
+}
+
+.swiper-button-next::after {
+    content: '';
+    width: 18px;
+    height: 11px;
+    background: url(../images/Work/arrow_right.svg);
+} 
 
 .reviews__image {
     width: 100%;
