--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,385 @@ a, a:link, a:visited {
 label, span {
   display: block;
 }
+.preview {
+  width: 100%;
+  height: 988px;
+  background-image: url("../images/sectionpage/bg-title.jpg");
+  background-repeat: no-repeat;
+  background-position-y: center;
+}
+.preview__container {
+  width: 726px;
+  height: 648px;
+  padding-top: 220px;
+}
+.preview__title {
+  font-size: 72px;
+  font-family: "Ubuntu-bold";
+  line-height: 130%;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+}
+.preview__title span {
+  font-size: 72px;
+  font-family: "Ubuntu-bold";
+  line-height: 130%;
+  color: #FF5A30;
+  display: inline-block;
+}
+
+.preview__subtitle {
+  font-size: 20px;
+  font-family: "Ubuntu-regular";
+  line-height: 150%;
+  color: #FFFFFF;
+  padding-top: 44px;
+}
+.preview__btns {
+  width: 526px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 61px;
+
+}
+.about__btn {
+  border-radius: 4px;
+  width: 278px;
+  height: 52px;
+  border: 1px solid #FFFFFF;
+  background: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.about__content{
+  font-size: 16px;
+  font-family: "Ubuntu-bold";
+  line-height: 52%;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+}
+.about__btn:hover {
+  border-color: #FF5A30
+}
+.about__btn:hover >.about__content {
+  color: #FF5A30;
+}
+.submit__btn {
+  border-radius: 4px;
+  width: 224px;
+  height: 52px;
+  background-color: #FF5A30;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.submit__content {
+  font-size: 16px;
+  font-family: "Ubuntu-bold";
+  line-height: 52%;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+}
+.submit__btn:hover {
+  background-color: #FF7F50;
+}
+.submit__btn:hover >.submit__content {
+  color: #FFFAFA;
+}
+.slider {
+  width: 724px;
+  height: 54px;
+  padding-top: 179px;
+}
+.slider__breadcrumbs {
+  display: flex;
+  justify-content: space-between;
+}
+.slider__breadcrumb {
+  font-family: "Ubuntu-regular";
+  font-size: 28px;
+  line-height: 150%;
+  color: #9A9CA5;
+  width: 178px;
+}
+.slider__breadcrumb_item {
+  border-bottom: 2px solid #9A9CA5;
+}
+
+.slider__breadcrumb_active {
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+.arrow__left_btn {
+  left: 32px;
+}
+.arrow__active {
+  border-radius: 48px;
+  width: 48px;
+  height: 48px;
+  outline: none;
+  background: #9A9CA5;
+  position: absolute;
+  top: 580px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.arrow__right_btn {
+  right: 32px;
+  transform: rotate(180deg);
+}
+.arrow__active:hover {
+  background-color: #FFFFFF;
+}
+.construction__container {
+  padding-top: 120px;
+  height: 791px;
+}
+.construction__title {
+  font-family: "Ubuntu-bold";
+  font-size: 46px;
+  line-height: 130%;
+  display: flex;
+  justify-content: center;
+  color: #1E212C;
+}
+.construction__text {
+  font-family: "Ubuntu-regular";
+  font-size: 18px;
+  line-height: 150%;
+  display: flex;
+  justify-content: center;
+  padding-top: 37px;
+  color: #787A80;
+}
+iframe {
+  padding-top: 67px;
+}
+.value {
+  padding-top: 180px;
+  padding-bottom: 270px;
+}
+.value__title {
+  font-family: "Ubuntu-bold";
+  font-size: 46px;
+  line-height: 130%;
+  color: #1E212C;
+  display: flex;
+  justify-content: center;
+}
+.value__text {
+  font-family: "Ubuntu-regular";
+  font-size: 18px;
+  line-height: 150%;
+  color: #787A80;
+  display: flex;
+  justify-content: center;
+  padding-top: 38px;
+}
+.value__items {
+  padding-top: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+.value__image {
+  width: 48px;
+  height: 48px;
+}
+.value__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.value__title_item {
+  font-family: "Ubuntu-bold";
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+  padding-top: 25px;
+}
+.value__subtitle_item {
+  font-family: "Ubuntu-regular";
+  font-size: 16px;
+  line-height: 160%;
+  color: #787A80;
+  text-align: center;
+  padding-top: 15px;
+}
+.line__gradient {
+  background: linear-gradient(0deg, rgba(220, 218, 221, 0.1), #DADBDD, rgba(220, 218, 221, 0.1));
+  width: 2px;
+}
+.form__question {
+  max-height: 243px;
+}
+.question {
+  font-family: Ubuntu-bold;
+  font-size: 28px;
+  line-height: 150%;
+  color: #1E212C;
+  display: flex;
+  justify-content: center;
+}
+.form__items {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 32px;
+}
+span {
+  font-family: Ubuntu-regular;
+  font-size: 14px;
+  line-height: 150%;
+  color: #424551;
+
+}
+.form__name_input {
+  width: 260px;
+  height: 44px;
+  background: #F4F5F6;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 16px;
+}
+.form__phone_input {
+  width: 260px;
+  height: 44px;
+  background: #F4F5F6;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 16px;
+}
+.form__message_input {
+  width: 414px;
+  height: 44px;
+  background: #F4F5F6;
+  border: 1px solid #D7DADD;
+  border-radius: 4px;
+  outline: none;
+  padding-left: 16px;
+  font-family: Ubuntu-regular;
+  font-size: 14px;
+  line-height: 150%;
+  color: #9A9CA5;
+}
+.mini__form_btn {
+  width: 104px;
+  height: 44px;
+  border-radius: 4px;
+  background-color: #FF5A30;
+  margin-top: 20px;
+  font-family: Ubuntu-bold;
+  font-size: 14px;
+  line-height: 44px;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+.mini__form_btn:hover {
+  background-color: #FF7F50;
+  color: #FFFAFA;
+}
+.services {
+  width: 1920px;
+  height: 880px;
+  background-image: url("../images/sectionpage/bg-services.png");
+  background-repeat: no-repeat;
+  background-color: #F4F5F6;
+  background-position: center;
+}
+.services__title {
+  font-family: Ubuntu-bold;
+  font-size: 46px;
+  line-height: 130%;
+  color: #1E212C;
+  display: flex;
+  justify-content: center;
+  padding-top: 220px;
+}
+.services__subtitle {
+  font-family: "Ubuntu-regular";
+  font-size: 18px;
+  line-height: 150%;
+  color: #787A80;
+  display: flex;
+  justify-content: center;
+  padding-top: 38px;
+}
+.services__items {
+  padding-top: 68px;
+  display: flex;
+  justify-content: space-between;
+}
+.service__item {
+  width: 285px;
+  height: 285px;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.service__item:hover{
+  background-image: url("../images/sectionpage/bg-hover-image.jpg");
+  background-color: #1E212C;
+}
+.service__item_text {
+  font-family: Ubuntu-bold;
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+  padding-top: 25px;
+}
+.service__item_text:hover {
+  color: #FFFFFF;
+}
+svg {
+  color: #FF5A30;
+}
+svg:hover  {
+  color: #FFFFFF;
+}
+.learn {
+  display: flex;
+  justify-content: center;
+  padding-top: 80px;
+  align-items: center;
+}
+.learn__text {
+  font-family: Ubuntu-bold;
+  font-size: 28px;
+  line-height: 150%;
+  color: #1E212C;
+  padding-right: 40px;
+}
+.learn__btn {
+  border-radius: 4px;
+  width: 207px;
+  height: 52px;
+  background-color: #FF5A30;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.learn__btn_text {
+  font-family: Ubuntu-bold;
+  font-size: 16px;
+  line-height: 52px;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+}
+.learn__btn:hover {
+  background-color: #FF7F50;
+  color: #FFFAFA;
+}
 
 .feedback {
   padding: 80px 0;
