--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ label, span {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: all ease .4s;
 }
 .about__content{
   font-size: 16px;
@@ -194,6 +195,7 @@ label, span {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: all ease .4s;
 }
 .submit__content {
   font-size: 16px;
@@ -234,6 +236,7 @@ label, span {
 }
 .arrow__left_btn {
   left: 32px;
+  transition: all ease .4s;
 }
 .arrow__active {
   border-radius: 48px;
@@ -251,6 +254,7 @@ label, span {
 .arrow__right_btn {
   right: 32px;
   transform: rotate(180deg);
+  transition: all ease .4s;
 }
 .arrow__active:hover {
   background-color: #FFFFFF;
@@ -281,7 +285,7 @@ iframe {
 }
 .value {
   padding-top: 180px;
-  padding-bottom: 270px;
+  padding-bottom: 120px;
 }
 .value__title {
   font-family: "Ubuntu-bold";
@@ -334,7 +338,26 @@ iframe {
   width: 2px;
 }
 .form__question {
-  max-height: 243px;
+  min-height: 240px;
+}
+.form__container {
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+  min-height: 240px;
+}
+.form__container_position {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FFFFFF;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100px;
+  bottom: -100px;
+  padding: 48px 60px ;
 }
 .question {
   font-family: Ubuntu-bold;
@@ -356,26 +379,8 @@ span {
   color: #424551;
 
 }
-.form__name_input {
+.form__name_input, .form__phone_input, .form__message_input {
   width: 260px;
-  height: 44px;
-  background: #F4F5F6;
-  border: 1px solid #D7DADD;
-  border-radius: 4px;
-  outline: none;
-  padding-left: 16px;
-}
-.form__phone_input {
-  width: 260px;
-  height: 44px;
-  background: #F4F5F6;
-  border: 1px solid #D7DADD;
-  border-radius: 4px;
-  outline: none;
-  padding-left: 16px;
-}
-.form__message_input {
-  width: 414px;
   height: 44px;
   background: #F4F5F6;
   border: 1px solid #D7DADD;
@@ -386,6 +391,10 @@ span {
   font-size: 14px;
   line-height: 150%;
   color: #9A9CA5;
+  margin-right: 24px;
+}
+.form__message_input {
+  width: 414px;
 }
 .mini__form_btn {
   width: 104px;
@@ -399,18 +408,19 @@ span {
   letter-spacing: 0.5px;
   color: #FFFFFF;
   cursor: pointer;
+  transition: all ease .4s;
 }
 .mini__form_btn:hover {
   background-color: #FF7F50;
   color: #FFFAFA;
 }
 .services {
-  width: 1920px;
-  height: 880px;
+  width: 100%;
   background-image: url("../images/sectionpage/bg-services.png");
   background-repeat: no-repeat;
   background-color: #F4F5F6;
   background-position: center;
+  padding-bottom: 80px;
 }
 .services__title {
   font-family: Ubuntu-bold;
@@ -444,10 +454,15 @@ span {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(30, 33, 44, 0.03), 0px 12px 10px rgba(154, 156, 165, 0.04), 0px 30px 24px rgba(154, 156, 165, 0.05), 0px 80px 80px rgba(154, 156, 165, 0.08);
+  transition: all ease .4s;
 }
 .service__item:hover{
   background-image: url("../images/sectionpage/bg-hover-image.jpg");
   background-color: #1E212C;
+}
+.service__item:hover svg {
+  color: #FFFFFF;
 }
 .service__item_text {
   font-family: Ubuntu-bold;
@@ -456,14 +471,11 @@ span {
   color: #1E212C;
   padding-top: 25px;
 }
-.service__item_text:hover {
+.service__item:hover .service__item_text {
   color: #FFFFFF;
 }
 svg {
   color: #FF5A30;
-}
-svg:hover  {
-  color: #FFFFFF;
 }
 .learn {
   display: flex;
@@ -483,10 +495,8 @@ svg:hover  {
   width: 207px;
   height: 52px;
   background-color: #FF5A30;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
+  transition: all ease .4s;
 }
 .learn__btn_text {
   font-family: Ubuntu-bold;
@@ -494,12 +504,128 @@ svg:hover  {
   line-height: 52px;
   letter-spacing: 0.5px;
   color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .learn__btn:hover {
   background-color: #FF7F50;
   color: #FFFAFA;
 }
-
+.works__container {
+  width: 100%;
+  padding-top: 120px;
+}
+.works__title {
+  font-family: Ubuntu-bold;
+  font-size: 46px;
+  line-height: 130%;
+  color: #1E212C;
+  display: flex;
+  justify-content: flex-start;
+}
+.work {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 73px;
+}
+.work__case {
+  max-width: 390px;
+  position: relative;
+  box-shadow: 0px 4px 4px rgba(30, 33, 44, 0.03), 0px 12px 10px rgba(154, 156, 165, 0.04), 0px 30px 24px rgba(154, 156, 165, 0.05), 0px 80px 80px rgba(154, 156, 165, 0.08);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.work__image {
+  width: 100%;
+}
+.work__text {
+  display: flex;
+  width: 100%;
+  padding: 16px 20px 24px;
+  flex-direction: column;
+  align-items: center;
+  background: #FFFFFF;
+  transition: all ease .4s;
+  position: relative;
+  z-index: 1;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.work__title {
+  font-family: 'Ubuntu-bold';
+  font-size: 20px;
+  line-height: 150%;
+  color: #1E212C;
+}
+.work__desc {
+  font-family: 'Ubuntu-regular';
+  font-size: 14px;
+  line-height: 150%;
+  color: #787A80;
+}
+.case__btn {
+  position: absolute;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  bottom: 24px;
+  z-index: 0;
+  max-width: 172px;
+  background: #fff;
+  font-family: 'Ubuntu-bold';
+  font-size: 14px;
+  line-height: 44px;
+  letter-spacing: 0.5px;
+  color: #ff5a30;
+  border: 1px solid #ff5a30;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all ease .4s;
+}
+.case__btn:hover {
+  background: #ff5a30;
+  color: #fff;
+}
+.work__case:hover .work__text {
+  transform: translateY(-85px);
+}
+.explore__work {
+  padding-top: 80px;
+  padding-bottom: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.explore__text {
+  font-family: Ubuntu-bold;
+  font-size: 28px;
+  line-height: 150%;
+  color: #1E212C;
+  padding-right: 40px;
+}
+.portfolio__btn {
+  border-radius: 4px;
+  width: 207px;
+  height: 52px;
+  background-color: #FF5A30;
+  cursor: pointer;
+}
+.portfolio__text_btn {
+  font-family: Ubuntu-bold;
+  font-size: 16px;
+  line-height: 52px;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.portfolio__btn:hover {
+  background-color: #FF7F50;
+  color: #FFFAFA;
+}
 .feedback {
   padding: 80px 0;
   background: url(../images/Work/forms_bg.png) no-repeat;
