--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,90 @@ label, span {
   background-repeat: no-repeat;
   background-position-y: center;
 }
+.header__burger-btn {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  transition: all ease 0.2s;
+  cursor: pointer;
+}
+.header__burger-btn:hover {
+  opacity: 0.6;
+}
 
+.burger {
+  display: none;
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+}
+.burger .burger__menu {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 220px;
+  height: 100vh;
+  background: #fff;
+}
+.burger .burger__menu .header__list_burger {
+  flex-direction: column;
+  padding: 30px;
+}
+.burger .burger__menu .header__list_burger .header__number_burger {
+  margin: 40px 0 15px;
+}
+.burger .burger__menu .header__list_burger .header__number_burger,
+.burger .burger__menu .header__list_burger .header__email_burger {
+  background: none;
+}
+.burger .burger__menu .header__list_burger .header__number_burger small,
+.burger .burger__menu .header__list_burger .header__email_burger small {
+  transition: all ease 0.2s;
+  font-family: "Ubuntu-bold";
+  font-size: 14px;
+  line-height: 150%;
+  color: #424551;
+}
+.burger .burger__menu .header__list_burger .header__number_burger span,
+.burger .burger__menu .header__list_burger .header__email_burger span {
+  transition: all ease 0.2s;
+  font-family: "Ubuntu-regular";
+  font-size: 18px;
+  line-height: 150%;
+  color: #1E212C;
+}
+.burger .burger__menu .header__list_burger .header__number_burger:hover small,
+.burger .burger__menu .header__list_burger .header__email_burger:hover small {
+  color: #9A9CA5;
+}
+.burger .burger__menu .header__list_burger .header__number_burger:hover span,
+.burger .burger__menu .header__list_burger .header__email_burger:hover span {
+  color: #9A9CA5;
+}
+
+.burger_active {
+  display: block;
+}
+
+@media screen and (max-width: 1024px) {
+  .header__burger-btn {
+    display: flex;
+  }
+  .header__nav {
+    display: none;
+  }
+  .header__contact {
+    display: none;
+  }
+}
 a, a:link, a:visited {
   text-decoration: none;
   display: block;
